# ai10-test-project

./: .env.example  .gitignore  Dockerfile  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  setup.sh
.claude/skills/: jirara.md
.github/skills/jirara/: SKILL.md
backend/: db.py  main.py  pyproject.toml
backend/models/: job.py
backend/routers/: callback.py  jobs.py  mcp.py
backend/services/: copilot_executor.py  executor.py  mcp.py  mcp_loader.py  queue.py  scheduler.py  validator.py
backend/tests/: conftest.py  test_copilot_mcp_classify.py  test_db.py  test_emit_summary.py  test_env_overrides.py  test_event_classify.py  test_executor.py  test_mcp_loader.py  test_rerun_api.py  test_rerun_chain.py  test_rerun_db.py  test_rerun_models.py  test_stream_output.py  test_workdir_cleanup.py
docs/: system-spec.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.vue  api.js  app.css  router.js
frontend/src/components/: StatusBadge.jsx  StatusBadge.vue  TokenGate.jsx  TokenGate.vue
frontend/src/composables/: useCredentials.js
frontend/src/pages/: Dashboard.jsx  Dashboard.vue  JobDetail.jsx  JobDetail.vue  NewJob.jsx  NewJob.vue
openspec/changes/frontend-ui-redesign/: design.md  proposal.md  tasks.md
openspec/changes/log-summary-and-theme/: .openspec.yaml
openspec/changes/migrate-frontend-to-vue/: .openspec.yaml  tasks.md
openspec/changes/persist-jira-email-localstorage/: .openspec.yaml  proposal.md
openspec/specs/concurrent-job-execution/: spec.md
openspec/specs/copilot-jirara-injection/: spec.md
(+83 files in other folders)
