[project]
name = "claude-remote-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.20.0",
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sse-starlette==2.2.1",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
